ADD button to start a new dice game

--- a/dadi/index.html
+++ b/dadi/index.html
@@ -11,6 +11,12 @@
   </head>
   
   <body>
+
+    <form>
+
+      <button type="submit">NUOVA PARTITA</button>
+
+    </form>
     
     <script src="./assets/js/main.js"></script>
     
